<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/mainacrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#35475d"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="66dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="48dp"
            android:weightSum="1" >

            <LinearLayout
                android:id="@+id/box1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="14dp" >

                <TextView
                    android:id="@+id/Txt0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt0_title"
                    android:textColor="@color/mainEtcTitle" />

                <EditText
                    android:id="@+id/inputTxt1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/iptbox"
                    android:ems="10"
                    android:hint="@string/ipnt1"
                    android:padding="5dp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp" >

                <TextView
                    android:id="@+id/Txt1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt1_title"
                    android:textColor="@color/mainEtcTitle" />

                <LinearLayout
                    android:id="@+id/topbox2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:weightSum="1"
                    android:layout_marginTop="5dp"
                     >

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.7" >

                        <Spinner
                        android:id="@+id/fontSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"                        
                        android:background="@drawable/selbox2"
                        android:drawSelectorOnTop="true"
                        android:layout_marginEnd="2.5dp"
                        android:prompt="@string/font_list" />
                        
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.3" >

                        <Spinner
                            android:id="@+id/sizeSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginStart="2.5dp"
                            android:background="@drawable/selbox2"
                            android:drawSelectorOnTop="true"
                            android:prompt="@string/font_list"
                            android:textAlignment="center" />
                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_style2"
                    android:height="48dp"
                    android:text="@string/btntxt1" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/fontViewArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"                 
                >               
                
                
            </LinearLayout>          
        </LinearLayout>
    </ScrollView>

</RelativeLayout>